--- a/local.properties
+++ b/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/home/user/.androidsdkroot
+sdk.dir=/opt/android
 flutter.sdk=/home/user/flutter
-flutter.buildMode=debug
+flutter.buildMode=release
 flutter.versionName=1.0.0
 flutter.versionCode=1
